Fixes PII modal offscreen

--- a/sass-mixins/nitro-ui/_modals.scss
+++ b/sass-mixins/nitro-ui/_modals.scss
@@ -260,6 +260,7 @@ ref: https://github.com/twbs/bootstrap/issues/14839
 .body-project_documents,
 .body-project_photos,
 .body-projects,
+.body-credit_applications,
 .body-candidate_interviews {
   .modal:before {
     content: " ";
